rnsc/test_data/integration/error/parser/outside_class_directive/eof.rns
; only a comment, no class at all
